runtime/src/test/resources/tests/error/errors_unknown_func.wstl
package errors

ones();

def one() {
  "one";
}
